--- a/css/home.css
+++ b/css/home.css
@@ -1,15 +1,3 @@
 body { 
-	background-color: #0c219f; 
-}
-
-p {
-
-	color: yellow;
-}
-
-h1 {
-	font-size: 100px;
-	color: yellow;
-	background-color: black;
-	padding: 40px;
+	background-color: #66fe64; 
 }
