--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,12 @@
 body { 
 	background-color: #66fe64; 
 }
+
+ul {
+	list-style-type: none;
+}
+li {
+	display: inline-block;
+	padding: 10px;
+	background-color: #2fd169;
+}
